--- a/style.css
+++ b/style.css
@@ -3,6 +3,93 @@
  		height: 2000px;
  		margin: 0 auto;	
 }
+.head{
+	width: 100%;
+	height: 50px;
+	background: black;
+}
+.head .logo{
+	float: left;
+	width: 30%;
+	height: 100%;background: black;
+}
+.logo ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+.logo ul li a{
+	float: left;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
+.logo ul li a h3{
+	text-decoration: none;
+	color:white;
+	width: 100%;
+	height: 100%;
+	float: left;
+	font-size: 15px;
+	color: white;
+	font-family: Helvetica, Arial, Tahoma, sans-serif;
+	display: block;
+}
+.logo ul li a:hover{
+	width: 100%;
+	height: 100%;
+	/*background: green;*/
+}
+.logo ul li a h3:hover{
+	color: #7FFFD4;
+}
+.head .menu{
+	float: left;
+	width: 70%;
+	height: 100%;
+	background: black;
+}
+.menu ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	width: 100%;
+	height: 100%;
+	}
+.menu ul li{
+	float: left;
+	display: block;
+	width: 20%;
+	height: 100%;
+	line-height: 40px;
+	/*/background: gray;*/
+}
+.menu ul li a{
+	text-decoration: none;
+	font-size: 20px;
+	color: white;
+	/*background: gray;*/
+	display: block;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
+.menu ul li a:hover{
+	color: #cc33cc;
+}
+.menu ul li:hover{
+	/*background: #BDBDBD;*/
+}
+.menu ul li.active{
+	background: #BDBDBD;
+}
+.menu ul li.active a{
+	color: yellow;
+}
+.menu ul li.active:hover{
+	background: black;
+}
+
 /*--------------truong.........*/
 /*---------------hien------------*/
 /*------------luong---------*/
