--- a/style.css
+++ b/style.css
@@ -6,4 +6,78 @@
 /*--------------truong.........*/
 /*---------------hien------------*/
 /*------------luong---------*/
+.aside {
+	width: 100%;
+	height: 250px;
+	background: black;
+}
+.aside .box{
+	float: left;
+	width: 30%;
+	height: 100%;
+	/*background: green;*/
+}
+.box .pic{
+	width: 50px;
+	height: 50px;
+	/*background: yellow;*/
+}
+.box h2{
+	display: block;
+	width: 25%;
+	height: 0px;
+	/*background: red;*/
+	/*line-height: 30px;*/
+	padding: 25px 150px;
+	text-transform: uppercase;
+	margin: 0;
+	color: white;
+}
+.box img{
+	width: 100%;
+	height: 100%;
+	/*background: blue;*/
+	padding:15px 170px; 
+	border-radius: 50%;
+}
+.box h5{
+	margin: 0;
+	display: block;
+	/*background: blue;*/
+	/*line-height: 20px;*/
+	padding: 25px 145px;
+	width: 100%;
+	height: 0px;
+	color:  #e6e600;
+
+}
+.box p{
+	margin: 0;
+	text-align: center;
+	font-size: 13px;
+	line-height: 15px;
+	color:   #404040;
+
+
+}
+.box a{
+	margin: 0;
+	display: block;
+	/*background: yellow;*/
+	width: 100%;
+	line-height: 15px;
+	padding: 10px 175px;
+	text-decoration: none;
+	text-transform: uppercase;
+	color: white;
+}
+.box a:hover{
+	color:  #ff1a75;
+
+}
+.dip{
+	margin-right: 5%;
+	margin-left: 5%;
+}
+
 /*----------------hieu-------------*/
