--- a/style.css
+++ b/style.css
@@ -7,3 +7,139 @@
 /*---------------hien------------*/
 /*------------luong---------*/
 /*----------------hieu-------------*/
+.khung .article{
+	height: 950px;
+	font-family: serif;
+}
+.article .line{
+	width: 10%;
+	height: 2px;
+	background: yellow;
+	margin-top: 10px;
+	margin: 0 auto;
+}
+.article h3{
+	font-size: 20px;
+	color: black;
+	text-align: center;
+	margin: 0;
+	padding: 10px 0;
+}
+.article p{
+	font-size: 16px;
+	color: black;
+	text-align: center;
+	margin: 0;
+	padding:  10px 0;
+}
+.article .content-top{
+	width: 100%;
+	height: 400px;
+	margin: 0 5%;
+}
+.article .content-top .content-img{
+ 	float: left;
+ 	width: 21%;
+	height: 300px;
+}
+.article .content-top .content-img a{
+	height: 187px;
+	border: 2px solid yellow;
+	display: block;
+}
+.article .content-top .content-img a img{
+	width: 100%;
+	padding-top: 2px;
+}
+.article .content-top .content-img h4{
+	font-style: bold;
+	font-size: 18px;
+	color: black;
+	text-align: center;
+	margin: 0;
+	padding: 15px 0;
+}
+.article .content-top .content-img .content-line{
+	width: 30%;
+	height: 2px;
+	background-color: yellow;
+	margin: 0 auto;
+	margin-bottom: 5px;
+}
+.article .content-top .content-img p{
+	font-size: 16px;
+}
+.article .content-top .content-img a.active{
+	display: block;
+	width: 60%;
+	height: 30px;
+	border-radius: 20px 60px 0px 20px;
+	text-decoration: none;
+	text-align: center;
+	line-height: 30px;
+	background: yellow;
+	font-size: 18px;
+	font-style: bold;
+	color: white;
+	margin: 0 auto;
+}
+
+.diff1{
+	margin-left: 2%;
+}
+.diff2{
+	margin: 0 2%;
+}
+.article .line-mid{
+	width: 100%;
+	height: 3px;
+	background-color: silver;
+	margin-bottom: 20px;
+}
+.article .content-bottom{
+	width: 100%;
+	height: 400px;
+	margin: 0 5%;
+}
+.article .content-bottom .content-img{
+ 	float: left;
+ 	width: 21%;
+	height: 300px;
+}
+.article .content-bottom .content-img a{
+	height: 200px;
+	display: block;
+}
+.article .content-bottom .content-img a img{
+	width: 100%;
+	padding-top: 2px;
+}
+.article .content-bottom .content-img h4{
+	font-style: bold;
+	font-size: 18px;
+	color: black;
+	text-align: center;
+	margin: 0;
+	padding: 15px 0;
+}
+.article .content-bottom .content-img .content-line1{
+	width: 100%;
+	height: 2px;
+	background-color: silver;
+	margin: 0 auto;
+	margin-bottom: 5px;
+}
+.article .content-bottom .content-img a.active{
+	display: block;
+	width: 60%;
+	height: 30px;
+	border-radius: 20px 60px 0px 20px;
+	text-decoration: none;
+	text-align: center;
+	line-height: 30px;
+	background: black;
+	font-size: 18px;
+	font-style: bold;
+	color: white;
+	margin: 0 auto;
+}
